   - Implementasi caching strategy menggunakan Workbox untuk aset statis.
   - Menambahkan folder `public/icons` untuk aset PWA.
   - Membuat unit test untuk memastikan konfigurasi PWA valid.
   - File yang disentuh:
     - nuxt-fe/nuxt.config.ts
     - nuxt-fe/package.json
     - nuxt-fe/public/icons/pwa-192x192.png
     - nuxt-fe/public/icons/pwa-512x512.png
     - nuxt-fe/tests/pwa.test.ts

Timestamp: 2026-02-01 18:20:00

LATEST UPDATES - 29 Januari 2026
==============================

1. PENINGKATAN KEAMANAN & UX (FRONTEND - PRODUCTION READY)
   - Menambahkan Global Error Page (`error.vue`) untuk menangani error 404/500 dengan UX yang ramah.
   - Memperbaiki link navigasi Sidebar di `navItems.ts`:
     - Mengarahkan "Section" ke `/admin/bank/soal` (sebelumnya broken `/admin/sections`).
     - Menyembunyikan link "Group Soal" dan "Tambah Soal" yang belum diimplementasikan.
   - Refactor `admin/bank/soal` dan `admin/bank-soal`:
     - Menggunakan `onRequest` interceptor pada `useFetch` untuk memastikan token autentikasi selalu valid (refresh otomatis).
     - Memperbaiki tipe data TypeScript dan penanganan error.
   - Implementasi **Dynamic Favicon & Title**:
     - `app.vue` sekarang memuat pengaturan aplikasi (`appName`, `faviconUrl`) dari database.
     - Browser tab akan otomatis menampilkan logo dan nama aplikasi yang sesuai dengan konfigurasi white-label.
   - Implementasi **Kontrol Akses Ujian (Test Access Control)**:
     - Menambahkan logika pengecekan `end_date` pada halaman ujian (`pages/test/[id].vue`).
     - Ujian tidak dapat diakses (terkunci) jika waktu sekarang melewati jadwal selesai.
     - Menambahkan tampilan "Ujian Telah Berakhir" yang informatif.
   - File yang disentuh: 
     - nuxt-fe/error.vue
     - nuxt-fe/data/navItems.ts
     - nuxt-fe/pages/admin/bank/soal/index.vue
     - nuxt-fe/pages/admin/bank-soal/index.vue
     - nuxt-fe/app.vue
     - nuxt-fe/composables/useTestSession.ts
     - nuxt-fe/pages/test/[id].vue
