@@ -31,6 +31,7 @@ jobs:
           FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           API_URL: ${{ secrets.TOAFL_API_URL }}
+          MEDIA_URL: ${{ secrets.MEDIA_URL }}
 
       # STEP 1 — Upload ke HOME user (AMAN)
       - name: Upload build to VPS (temp)
