@@ -70,7 +70,11 @@ export default defineNuxtConfig({
     },
     workbox: {
       navigateFallback: '/',
-      globPatterns: ['**/*.{js,css,html,png,svg,ico}']
+      globPatterns: ['**/*.{js,css,html,png,svg,ico,json}'],
+      // Avoid warning for non-existent _payload.json
+      modifyURLPrefix: {
+        '': ''
+      }
     },
     client: {
       installPrompt: true
